--- a/contact.html
+++ b/contact.html
@@ -165,8 +165,8 @@
                 </div>
                 
                 <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-                    <form action="https://api.web3forms.com/submit" method="POST">
-                          <input type="hidden" name="access_key" value="a87047a9-d51d-486d-a238-3dc46eaf547d">
+                    <form>
+                          
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
